--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+xings-user-accounts (0.2.4-1) unstable; urgency=medium
+
+  * Nueva version con correcciones menores.
+
+ -- Matias De lellis <mati86dl@gmail.com>  Tue, 10 Aug 2021 11:22:39 -0300
+
+xings-user-accounts (0.2.3-1) unstable; urgency=medium
+
+  * Nueva version.
+  * Habilita la camara para las fotos del usuario.
+
+ -- Matias De lellis <mati86dl@gmail.com>  Thu, 29 Jul 2021 13:02:06 -0300
+
 xings-user-accounts (0.2.2-1) unstable; urgency=medium
 
   * Arregla compilacion warning, y perdida de memoria.
